--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.88.11",
     "@react-three/fiber": "^8.15.9",
     "@types/d3-force": "^3.0.8",
     "@types/three": "^0.158.1",
     "d3-force": "^3.0.0",
+    "d3-hierarchy": "^3.1.2",
     "leva": "^0.9.35",
     "next": "14.0.1",
     "react": "^18",
@@ -22,6 +24,7 @@
     "three": "^0.158.0"
   },
   "devDependencies": {
+    "@types/d3-hierarchy": "^3.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
