--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/heatmap": "^0.83.0",
     "@react-spring/three": "^9.7.3",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.88.11",
@@ -23,11 +26,11 @@
     "three": "^0.158.0"
   },
   "devDependencies": {
+    "@types/d3-force": "^3.0.8",
     "@types/d3-hierarchy": "^3.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/d3-force": "^3.0.8",
     "@types/three": "^0.158.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
