--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "@nivo/bar": "^0.83.0",
+    "@nivo/circle-packing": "^0.83.0",
     "@nivo/core": "^0.83.0",
     "@nivo/heatmap": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
     "@react-spring/three": "^9.7.3",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.88.11",
     "@react-three/fiber": "^8.15.9",
+    "@visx/group": "^3.3.0",
+    "@visx/hierarchy": "^3.3.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.5.0",
     "d3-force": "^3.0.0",
     "d3-hierarchy": "^3.1.2",
     "leva": "^0.9.35",
