--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "d3-force": "^3.0.0",
     "d3-hierarchy": "^3.1.2",
     "leva": "^0.9.35",
+    "lodash": "^4.17.21",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
