--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@visx/scale": "^3.5.0",
     "d3-force": "^3.0.0",
     "d3-hierarchy": "^3.1.2",
+    "framer-motion": "^10.16.5",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "next": "14.0.1",
