--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.88.11",
     "@react-three/fiber": "^8.15.9",
+    "@visx/annotation": "^3.3.0",
+    "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
     "@visx/hierarchy": "^3.3.0",
+    "@visx/legend": "^3.5.0",
     "@visx/mock-data": "^3.3.0",
     "@visx/responsive": "^3.3.0",
     "@visx/scale": "^3.5.0",
@@ -32,7 +35,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-spring": "^9.7.3",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/d3-force": "^3.0.8",
