--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@visx/mock-data": "^3.3.0",
     "@visx/responsive": "^3.3.0",
     "@visx/scale": "^3.5.0",
+    "@visx/tooltip": "^3.3.0",
     "d3-force": "^3.0.0",
     "d3-hierarchy": "^3.1.2",
     "framer-motion": "^10.16.5",
