--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.88.11",
     "@react-three/fiber": "^8.15.9",
+    "@tanstack/react-table": "^8.10.7",
     "@visx/annotation": "^3.3.0",
     "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
