--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@visx/responsive": "^3.3.0",
     "@visx/scale": "^3.5.0",
     "@visx/tooltip": "^3.3.0",
+    "colord": "^2.9.3",
     "d3-force": "^3.0.0",
     "d3-hierarchy": "^3.1.2",
     "framer-motion": "^10.16.5",
