--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-resizable-panels": "^0.0.63",
     "react-spring": "^9.7.3",
     "three": "^0.158.0",
     "usehooks-ts": "^2.9.1"
